--- a/docs/styles.css
+++ b/docs/styles.css
@@ -224,3 +224,11 @@ select {
   background: rgba(0,0,0,0.12);
 }
 .small { font-size: 12px; }
+
+.manual {
+  max-width: 850px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 24px;
+}
+
